Add enable native access argument to JVM